--- a/roles/web/templates/gunicorn.conf.j2
+++ b/roles/web/templates/gunicorn.conf.j2
@@ -4,8 +4,8 @@ start on (filesystem)
 stop on runlevel [016]
 
 respawn
-setuid nobody
-setgid nogroup
+setuid {{ gunicorn_user }}
+setgid {{ gunicorn_group }}
 chdir {{ project_path }}
 
 exec ../bin/gunicorn --workers 3 --bind unix:{{ gunicorn_socket }} {{ project_name }}.wsgi:application
